Enable ContractRepositoryTest in swatch-contracts