@@ -311,7 +311,7 @@ class InventoryControllerTest {
     assertThat(
         conduitFacts.getMacAddresses(),
         Matchers.contains("00:00:00:00:00:00", "ff:ff:ff:ff:ff:ff"));
-    assertEquals(new Integer(2), conduitFacts.getCpuSockets());
+    assertEquals(Integer.valueOf(2), conduitFacts.getCpuSockets());
     assertEquals("x86_64", conduitFacts.getArchitecture());
     assertEquals(true, conduitFacts.getIsVirtual());
     assertEquals("Sockets", conduitFacts.getSysPurposeUnits());
@@ -328,8 +328,8 @@ class InventoryControllerTest {
 
     ConduitFacts conduitFacts = controller.getFactsFromConsumer(consumer);
 
-    assertEquals(new Integer(8), conduitFacts.getCpuCores());
-    assertEquals(new Integer(4), conduitFacts.getCoresPerSocket());
+    assertEquals(Integer.valueOf(8), conduitFacts.getCpuCores());
+    assertEquals(Integer.valueOf(4), conduitFacts.getCoresPerSocket());
   }
 
   @Test
@@ -341,8 +341,8 @@ class InventoryControllerTest {
 
     ConduitFacts conduitFacts = controller.getFactsFromConsumer(consumer);
 
-    assertEquals(new Long(32), conduitFacts.getMemory());
-    assertEquals(new Long(33543999488L), conduitFacts.getSystemMemoryBytes());
+    assertEquals(Long.valueOf(32), conduitFacts.getMemory());
+    assertEquals(Long.valueOf(33543999488L), conduitFacts.getSystemMemoryBytes());
   }
 
   @Test
@@ -366,8 +366,8 @@ class InventoryControllerTest {
 
     ConduitFacts conduitFacts = controller.getFactsFromConsumer(consumer);
 
-    assertEquals(new Long(31L), conduitFacts.getMemory());
-    assertEquals(new Long(33489100800L), conduitFacts.getSystemMemoryBytes());
+    assertEquals(Long.valueOf(31L), conduitFacts.getMemory());
+    assertEquals(Long.valueOf(33489100800L), conduitFacts.getSystemMemoryBytes());
   }
 
   @Test
